<resources>
    <string name="app_name">EzMacro</string>
    <string name="caloriesProgressText">Energy:</string>
    <string name="proteinProgressText">Protein:</string>
    <string name="fatProgressText">Fat:</string>
    <string name="carbProgressText">Carb:</string>
    <string name="itemListTitle">Food Items:</string>
    <string name="foodItemCreationNameHint">Food name</string>
    <string name="foodItemCreationNameText">Food item\'s name:</string>
    <string name="addNewFoodItemDescriptionHint">Description</string>
    <string name="addNewFoodItemDescriptionText">Description:</string>
    <string name="favoriteText">Favorite</string>
    <string name="weightText">Weight [g]</string>
    <string name="weightHint">Weight</string>
    <string name="servingsHint">Servings</string>
    <string name="servingsText">Servings</string>
    <string name="nutritionText">Nutrition per 100g:</string>
    <string name="energyText">Energy [kcal]:</string>
    <string name="energyHint">Energy</string>
    <string name="proteinHint">Protein</string>
    <string name="proteinText">Protein [g]:</string>
    <string name="fatHint">Fat</string>
    <string name="fatText">Fat [g]:</string>
    <string name="carbHint">Carbs</string>
    <string name="carbText">Carbs [g]:</string>
    <string name="saveButton">Save</string>
    <string name="addNewFoodItemTitle">Add new food item</string>
    <string name="editFoodItemTitle">Editing a food item</string>
    <string name="barcodeHint">Barcode</string>
    <string name="barcodeText">Barcode</string>
    <string name="add_food_item">Add food item</string>
    <string name="food_item_detached">"Removed the item from the log "</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_food_db">Food Database</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="food_db_title">All food items</string>
    <string name="log_new_item">Log new item</string>
    <string name="weight_dialog_title">Input weight in grams</string>
    <string name="weight_dialog_save">Save</string>
    <string name="weight_dialog_hint">Weight</string>
    <string name="log_empty_msg">Empty</string>
    <string name="db_empty_msg">Empty</string>
    <string name="food_item_removed">Removed the item from the database</string>
</resources>